[JG_A1_WHEEL_UI]: fix overflow

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -19,5 +19,5 @@ html {
 
 html,body{
   overflow-x: hidden;
-   overflow: auto;
+  overflow-y: auto;
 }
